--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,9 @@ JavaDemo/.settings/org.eclipse.jdt.core.prefs
 JavaDemo/.classpath
 
 .metadata/.mylyn/.tasks.xml.zip
+
+.metadata/.plugins/org.eclipse.core.resources/.history/5a/3072ec5f0f78001210ffeeb86adcb441
+
+.metadata/.plugins/org.eclipse.core.resources/.projects/JavaDemo/.indexes/af/history.index
+
+JavaDemo/bin/com/hulefei/javademo/Main.class
