--- a/.gitignore
+++ b/.gitignore
@@ -1,128 +1,6 @@
 
-.metadata/.lock
-
-.metadata/.mylyn/.taskListIndex/segments.gen
-
-.metadata/.mylyn/.taskListIndex/segments_1
-
-.metadata/.mylyn/tasks.xml.zip
-
-.metadata/.plugins/org.eclipse.cdt.make.core/specs.c
-
-.metadata/.plugins/org.eclipse.core.resources/.history/51/f0996b170a78001210ffeeb86adcb441
-
-.metadata/.plugins/org.eclipse.cdt.make.core/specs.cpp
-
-.metadata/.mylyn/repositories.xml.zip
-
-.metadata/.plugins/org.eclipse.cdt.core/.log
-
-.metadata/.plugins/org.eclipse.core.resources/.projects/JavaDemo/.indexes/properties.index
-
-.metadata/.plugins/org.eclipse.core.resources/.projects/JavaDemo/.markers.snap
-
-.metadata/.plugins/org.eclipse.core.resources/.projects/JavaDemo/.syncinfo.snap
-
-.metadata/.plugins/org.eclipse.core.resources/.projects/JavaDemo/org.eclipse.egit.core/GitProjectData.properties
-
-.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
-
-.metadata/.plugins/org.eclipse.core.resources/.root/.markers.snap
-
-.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
-
-.metadata/.plugins/org.eclipse.core.resources/.snap
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.core.resources.prefs
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.cdt.debug.core.prefs
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.debug.ui.prefs
-
-.metadata/.plugins/org.eclipse.ui.workbench/workingsets.xml
-
-.metadata/version.ini
-
-.metadata/.plugins/org.eclipse.jdt.launching/.install.xml
-
-.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.egit.core.prefs
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.debug.core.prefs
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.launching.prefs
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.core.prefs
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.context.core.prefs
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.ui.prefs
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.prefs
-
-.metadata/.plugins/org.eclipse.jdt.core/12640011.index
-
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.monitor.ui.prefs
-
-.metadata/.plugins/org.eclipse.jdt.core/1271342938.index
-
-.metadata/.plugins/org.eclipse.jdt.core/156905802.index
-
-.metadata/.plugins/org.eclipse.jdt.core/1384487945.index
-
-.metadata/.plugins/org.eclipse.jdt.core/1833648217.index
-
-.metadata/.plugins/org.eclipse.jdt.core/2545238116.index
-
-.metadata/.plugins/org.eclipse.jdt.core/1819685514.index
-
-.metadata/.plugins/org.eclipse.jdt.core/2326659272.index
-
-.metadata/.plugins/org.eclipse.jdt.core/272178059.index
-
-.metadata/.plugins/org.eclipse.jdt.core/3000285004.index
-
-.metadata/.plugins/org.eclipse.jdt.core/3266567714.index
-
-.metadata/.plugins/org.eclipse.jdt.core/3004609673.index
-
-.metadata/.plugins/org.eclipse.jdt.core/3321539481.index
-
-.metadata/.plugins/org.eclipse.jdt.core/3302703152.index
-
-.metadata/.plugins/org.eclipse.jdt.core/3712507179.index
-
-.metadata/.plugins/org.eclipse.jdt.core/3954040986.index
-
-.metadata/.plugins/org.eclipse.jdt.core/4238209716.index
-
-JavaDemo/.settings/org.eclipse.jdt.core.prefs
-
-.metadata/.plugins/org.eclipse.jdt.core/4249315662.index
-
-.metadata/.plugins/org.eclipse.jdt.core/450555687.index
-
-.metadata/.plugins/org.eclipse.jdt.core/765977872.index
-
-.metadata/.plugins/org.eclipse.jdt.core/770573466.index
-
-.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
-
-.metadata/.plugins/org.eclipse.jdt.core/84777399.index
-
-.metadata/.plugins/org.eclipse.jdt.core/javaLikeNames.txt
-
-.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
-
-.metadata/.plugins/org.eclipse.jdt.launching/libraryInfos.xml
+.metadata/*
 
 JavaDemo/.classpath
-
-.metadata/.mylyn/.tasks.xml.zip
-
-.metadata/.plugins/org.eclipse.core.resources/.history/5a/3072ec5f0f78001210ffeeb86adcb441
-
-.metadata/.plugins/org.eclipse.core.resources/.projects/JavaDemo/.indexes/af/history.index
 
 JavaDemo/bin/com/hulefei/javademo/Main.class
