--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 .metadata/*
 
 JavaDemo/bin/*
+
+JavaDemo/.DS_Store
+
+JavaDemo/src/.DS_Store
+
+JavaDemo/src/com/.DS_Store
+
+JavaDemo/src/com/hulefei/.DS_Store
