--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,8 @@ profile
 DerivedData
 .idea/
 
-/HelloNDK/bin/HelloNDK.apk
-/HelloNDK/bin/resources.ap_
-/HelloNDK/jni/myNative.c
-/HelloNDK/libs/armeabi/libnative.so
+/HelloNDK/bin/*
+/HelloNDK/libs/*
 /HelloNDK/obj/local/armeabi/libnative.so
-/HelloNDK/obj/local/armeabi/objs/native/myNative.o
-/HelloNDK/obj/local/armeabi/objs/native/myNative.o.d
+/HelloNDK/obj/local/armeabi/objs/*
+
